--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^2.2.0",
     "@neondatabase/serverless": "^0.10.4",
     "@tailwindcss/forms": "^0.5.10",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
     "autoprefixer": "10.4.20",
     "bcryptjs": "3.0.1",
